@@ -1112,6 +1112,11 @@ elseif ($srctbl == 'items') {
 	if (!is_null($value_types)) {
 		$options['filter']['value_type'] = $value_types;
 	}
+
+	if ($dstfrm == 'graphForm' || $dstfrm = 'graph_item') { // filter numeric value types speficly to graphs
+		$options['value_types'] = array(ITEM_VALUE_TYPE_FLOAT, ITEM_VALUE_TYPE_UINT64);
+	}
+
 	$items = API::Item()->get($options);
 	order_result($items, 'name', ZBX_SORT_UP);
 
@@ -1210,13 +1215,20 @@ elseif ($srctbl == 'prototypes') {
 	}
 	$table->setHeader($header);
 
-	$items = API::ItemPrototype()->get(array(
+	$options = array(
 		'nodeids' => $nodeid,
 		'selectHosts' => array('name'),
 		'discoveryids' => get_request('parent_discoveryid'),
 		'output' => API_OUTPUT_EXTEND,
 		'preservekeys' => true
-	));
+	);
+
+	// filter numeric value types speficly to graphs
+	if ($dstfrm == 'graphForm' || $dstfrm = 'graph_item') {
+		$options['value_types'] = array(ITEM_VALUE_TYPE_FLOAT, ITEM_VALUE_TYPE_UINT64);
+	}
+
+	$items = API::ItemPrototype()->get($options);
 	order_result($items, 'name');
 
 	foreach ($items as &$item) {
